# dilimit

./: .gitignore  CMakeLists.txt
blockers/: window_blocker.h
blockers/fake_blocker/: fake_blocker.cpp  fake_blocker.h
blockers/niri_blocker/: niri_blocker.cpp  niri_blocker.h
core/: active_window.h  cooldown_tracker.cpp  cooldown_tracker.h  dilimit_app.cpp  dilimit_app.h  main.cpp  usage_tracker.cpp  usage_tracker.h
notifiers/: notifier.h
notifiers/niri_notifier/: niri_notifier.cpp  niri_notifier.h
providers/: activity_provider.h
providers/fake_provider/: fake_provider.cpp  fake_provider.h
providers/niri_provider/: niri_provider.cpp  niri_provider.h
storage/: limit_rule.h  limit_storage.cpp  limit_storage.h
